# local_assistant

./: .env.example  .gitignore  LICENSE  Readme.md  pyproject.toml  setup.py
data/: folder_languages.json
data/img_to_text_files/: folder_languages.json
src/: config.py  logger.py  logs_config.json  main.py  parameters.yaml
src/chatbot/: chatbot.py  chatbot_tools.py  sys_prompt.txt
src/chatbot/agents/: __init__.py
src/chatbot/agents/cross_encoder/: CrossEncoder.py  cross_encoder.py  page_selector.py
src/chatbot/agents/decider_llm/: decide_llm_sys_prompt.txt  decider_llm.py
src/chatbot/agents/question_generator/: question_generator.py  question_generator_functions.py
src/chatbot/agents/summary_bot/: summary_bot.py  summary_llm_sys_prompt.txt
src/chatbot/agents/topic_finder/: topic_finder.py  topic_finder_sys_prompt.txt
src/chatbot/chatbot_tools/: __init__.py  contact_tools.py  reminder_tools.py  shopping_tools.py
src/chatbot/doc_searchers/: __init__.py
src/chatbot/doc_searchers/RAG/: delete_knowledge.py  extract_rag_topics.py  install_knowledge.py  rag_search.py
src/chatbot/doc_searchers/RAG/knowledge_extractors/: interpreter.py  ocr.py  readers.py
src/chatbot/doc_searchers/web_search/: web_search.py
src/chatbot/question_generator/: question_gen_sys_prompt.txt  question_generator_functions.py
src/chatbot/utils/: __init__.py  chatbot_tools.py  token_counter.py
src/chatbot/web_search/: search.py  search_functions.py  search_llm_sys_prompt.txt
