[project]
name = "local-assistant"
version = "0.3.0"
description = "AI Program that can learn from your files, message your contacts, create shopping list, and access internet to answer your questions. Runs locally."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "chromadb>=1.1.0",
    "docx>=0.2.4",
    "fastapi>=0.117.1",
    "googlesearch-python>=1.3.0",
    "httpx>=0.28.1",
    "langchain>=0.3.27",
    "langchain-ollama>=0.3.8",
    "llama-index>=0.14.2",
    "llama-index-core>=0.14.2",
    "llama-index-embeddings-ollama>=0.8.3",
    "llama-index-vector-stores-chroma>=0.5.3",
    "ollama>=0.5.4",
    "pymupdf>=1.26.4",
    "python-dotenv>=1.1.1",
    "python-telegram-bot>=22.4",
    "sentence-transformers>=5.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
